--- a/gastos.html
+++ b/gastos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>El Secreto de Roxana - Productos</title>
+    <title>El Secreto de Roxana - Gastos</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -19,8 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.2.1/css/dataTables.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/3.2.0/css/buttons.dataTables.min.css">
+
 </head>
 
 <body id="page-top">
@@ -60,16 +59,15 @@
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Control</span>
                 </a>
-                <div id="collapsePages" class="collapse show" aria-labelledby="headingPages"
-                    data-parent="#accordionSidebar">
+                <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item" href="sucursales.html">Sucursales</a>
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
                         <a class="collapse-item" href="clientes.html">Clientes</a>
-                        <a class="collapse-item active" href="productos.html">Productos</a>
+                        <a class="collapse-item" href="productos.html">Productos</a>
                         <a class="collapse-item" href="categorias.html">Categorias</a>
                         <a class="collapse-item" href="saldos.html">Saldos</a>
-                        <a class="collapse-item" href="gastos.html">Gastos</a>
+                        <a class="collapse-item active" href="gastos.html">Gastos</a>
                     </div>
                 </div>
             </li>
@@ -84,8 +82,8 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS" aria-expanded="true"
-                    aria-controls="collapsePOS">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS"
+                    aria-expanded="true" aria-controls="collapsePOS">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Ventas</span>
                 </a>
@@ -106,8 +104,8 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseStock" aria-expanded="true"
-                    aria-controls="collapseStock">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseStock"
+                    aria-expanded="true" aria-controls="collapseStock">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Stocks</span>
                 </a>
@@ -118,6 +116,8 @@
                     </div>
                 </div>
             </li>
+
+            <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Sidebar Toggler (Sidebar) -->
@@ -182,20 +182,21 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <h1 class="h3 mb-4 text-gray-800">Productos</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Lista de Gastos</h1>
 
                     <div class="row">
                         <div class="col-md-12 text-right mb-3">
                             <span class="btn btn-outline-primary btn-rounded" data-toggle="modal"
-                                data-target="#formulario" onclick="nuevo_producto();"><i class="fa fa-plus"></i> Nuevo
-                                Producto</span>
+                                data-target="#formulario" onclick="nuevo_gasto();"><i class="fa fa-plus"></i> Nuevo Gasto</span>
                         </div>
                         <div class="table-response w-100">
-                            <table class="table table-bordered table-striped" id="tabla-productos">
+                            <table class="table table-bordered table-striped" id="tabla-gastos">
                                 <thead>
                                     <th>Id</th>
-                                    <th>Producto</th>
-                                    <th>Categoría</th>
+                                    <th>Concepto</th>
+                                    <th>monto</th>
+                                    <th>Sucursal</th>
+                                    <th>Fecha</th>
                                     <th width="5%"></th>
                                 </thead>
                                 <tbody></tbody>
@@ -230,7 +231,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="productoModalLabel"></h5>
+                    <h5 class="modal-title" id="gastoModalLabel"></h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
@@ -238,20 +239,22 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <label for="producto">Producto</label>
-                            <input type="text" class="form-control" id="producto">
+                            <label for="concepto">Concepto</label>
+                            <input type="text" class="form-control" id="concepto">
                         </div>
-                        <div class="col-md-12">
-                            <label for="id_categoria">Categoría</label>
-                            <select name="" id="id_categoria" class="form-control">
-                                <option value="0">--SELECCIONE--</option>
-                            </select>
+                        <div class="col-md-6">
+                            <label for="monto">Monto</label>
+                            <input type="text" class="form-control" id="monto">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="id_sucursal">Sucursal</label>
+                            <select name="" id="id_sucursal" class="form-control"></select>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <span class="btn btn-outline-success" id="btn-accion-producto">Guardar</span>
+                    <span class="btn btn-outline-success" id="btn-accion-gasto">Guardar</span>
                 </div>
             </div>
         </div>
@@ -282,19 +285,9 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css" />
-    <script src="https://cdn.datatables.net/2.2.1/js/dataTables.min.js"></script>
-    <!--<script src="https://cdn.datatables.net/buttons/3.2.0/js/dataTables.buttons.min.js"></script>-->
 
-    <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.flash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.colVis.min.js"></script>
     <script src="js/util.js"></script>
-    <script src="js/productos.js"></script>
+    <script src="js/gastos.js"></script>
 </body>
 
 </html>
