--- a/abastecer.html
+++ b/abastecer.html
@@ -115,6 +115,7 @@
                 <div id="collapseStock" class="collapse show" aria-labelledby="headingPages"
                     data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="abastecer_manual.html">Abastecer Manual</a>
                         <a class="collapse-item active" href="abastecer.html">Abastecer Sucursal</a>
                         <a class="collapse-item" href="stock.html">Stock Actual</a>
                         <a class="collapse-item" href="movimientos.html">Movimientos</a>
