--- a/abastecer_manual.html
+++ b/abastecer_manual.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <title>El Secreto de Roxana - Nueva Venta</title>
+    <title>El Secreto de Roxana - Abastecer Stock Manual</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -23,19 +23,8 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <style>
-        .pointer {
-            cursor: pointer;
-        }
-
-        td {
-            vertical-align: middle !important;
-        }
-    </style>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css"
-        rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
+
 </head>
 
 <body id="page-top">
@@ -49,7 +38,6 @@
             <!-- Sidebar - Brand -->
             <div id="sidebar-brand-logo">
             </div>
-
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
@@ -69,7 +57,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item ">
+            <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
                     aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
@@ -97,16 +85,15 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item active">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePOS"
-                    aria-expanded="true" aria-controls="collapsePOS">
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS" aria-expanded="true"
+                    aria-controls="collapsePOS">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Ventas</span>
                 </a>
-                <div id="collapsePOS" class="collapse show" aria-labelledby="headingPages"
-                    data-parent="#accordionSidebar">
+                <div id="collapsePOS" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
-                        <a class="collapse-item active" href="venta.html">Nueva Venta</a>
+                        <a class="collapse-item" href="venta.html">Nueva Venta</a>
                         <a class="collapse-item" href="ventas.html">Lista Ventas</a>
                     </div>
                 </div>
@@ -120,21 +107,22 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseStock" aria-expanded="true"
-                    aria-controls="collapseStock">
+            <li class="nav-item active">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStock"
+                    aria-expanded="true" aria-controls="collapseStock">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Stocks</span>
                 </a>
-                <div id="collapseStock" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapseStock" class="collapse show" aria-labelledby="headingPages"
+                    data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item active" href="abastecer_manual.html">Abastecer Manual</a>
                         <a class="collapse-item" href="abastecer.html">Abastecer Sucursal</a>
                         <a class="collapse-item" href="stock.html">Stock Actual</a>
                         <a class="collapse-item" href="movimientos.html">Movimientos</a>
                     </div>
                 </div>
             </li>
-
             <hr class="sidebar-divider d-none d-md-block">
 
             <!-- Sidebar Toggler (Sidebar) -->
@@ -200,36 +188,42 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <h1 class="h3 mb-4 text-gray-800">Nueva Venta</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Abastecer Stock por Sucursal</h1>
+
                     <div class="row">
-                        <div class="col-md-12 row">
-                            <div class="form-group col-md-4 my-2">
-                                <label>Cliente</label>
+                        <div class="col-md-12 mb-3 form-row">
+                            <div class="form-group col-md-3 my-2">
+                                <label>Seleccionar Sucursal</label>
                             </div>
                             <div class="form-group col-md-4 my-2">
                                 <label for="producto">Producto</label>
                             </div>
-                            <div class="form-group col-md-3 my-2">
+                            <div class="form-group col-md-2 my-2">
+                                <label for="precio_unitario">Precio Unitario</label>
+                            </div>
+                            <div class="form-group col-md-2 my-2">
                                 <label for="cantidad">Cantidad</label>
                             </div>
                             <div class="form-group col-md-1 my-2"></div>
-                            <div class="form-group col-md-4 my-2">
 
+                            <div class="form-group col-md-3 my-2">
                                 <div class="input-group mb-3" style="display: flex;">
-                                    <select name="" id="id_cliente" class="form-control">
+                                    <select name="" id="id_sucursal" class="form-control">
                                         <option value="0">--SELECCIONE--</option>
                                     </select>
                                 </div>
                             </div>
-
                             <div class="form-group col-md-4 my-2">
-
                                 <div class="input-group mb-3" style="display: flex;">
                                     <input type="text" class="form-control" id="producto">
                                 </div>
                             </div>
-                            <div class="form-group col-md-3 my-2">
-
+                            <div class="form-group col-md-2 my-2">
+                                <div class="input-group mb-3" style="display: flex;">
+                                    <input type="text" class="form-control" id="precio_unitario">
+                                </div>
+                            </div>
+                            <div class="form-group col-md-2 my-2">
                                 <div class="input-group mb-3" style="display: flex;">
                                     <input type="text" class="form-control" id="cantidad">
                                 </div>
@@ -240,39 +234,17 @@
                                 </span>
                             </div>
                             <hr class="w-100">
-                            <div class="w-100 col-md-3" id="div_lista_ventas">
-                                <div class="order-empty" style="text-align: center; margin: 48px; color: #DDD;">
-                                    <i class="fa fa-shopping-cart" role="img" aria-label="Shopping cart"
-                                        title="Shopping cart" style="font-size: 64px;"></i>
-                                    <h1 style="font-size: 20px;">La lista esta vacia.</h1>
-                                </div>
-                            </div>
-                            <div class="form-group col-md-3 my-2">
-                                <label>Forma de Pago</label>
-                                <select class="form-control" id="id_forma_pago" name="id_forma_pago">
-                                    <option value="0">--SELECCIONE--</option>
-                                </select>
-                            </div>
-                            <div class="col-md-6">
-                                <table class="table">
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row" width="50%" style="text-align: right;">
-                                                Total:
-                                            </th>
-                                            <td id="">
-                                                <span id="total_detalle_span">S/ </span>
-                                                <input type="hidden" name="" readonly id="total" class="form-control">
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <hr>
-                                <div class="w-100 text-center">
-                                    <button class="btn btn-success" id="guardar_venta">Guardar Venta</button>
-                                    <button class="btn btn-danger" onclick="limpiar_formulario();">Cancelar</button>
-                                </div>
-                            </div>
+                        </div>
+                        <div class="table-response w-100">
+                            <table class="table table-bordered table-striped" id="tabla-abastecer">
+                                <thead>
+                                    <th>Sucursal</th>
+                                    <th>Producto</th>
+                                    <th>Cantidad</th>
+                                    <th>Precio Unitario</th>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -314,14 +286,10 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css" />
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/jquery.datetimepicker.full.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
     <script src="js/util.js"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
-    <script src="js/venta.js"></script>
+    <script src="js/abastecer_manual.js"></script>
 </body>
 
 </html>
